--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
                 W1D6 - Movie Review PHP
             </li>
         </ul>
+        <a
+href="http://validator.w3.org/check/referer"> <img
+src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+alt="html validator"/></a>
     </body>
 </html>
