--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
       
@@ -11,7 +11,7 @@
       </head>
     <body>
 
-        <img src="picture.jpg" />
+        <img src="picture.jpg" alt="Avatar"/>
         <h1>Munkhbold Dembel</h1>
         <ul>
             <li>
