--- a/w1d2recipe/index.html
+++ b/w1d2recipe/index.html
@@ -18,10 +18,10 @@
                 W1D1 - this homepage
             </li>
             <li>
-                <a href="w1d2/aboutme.html">W1D2 - About me</a>
+                W1D2 - About me
             </li>
             <li>
-                <a href="w1d2recipe/index.html">W1D3 - Recipe</a>
+                W1D3 - Recipe
             </li>
             <li>
                 W1D4 - Movie review
