fix validation error

--- a/w1d2/aboutme.html
+++ b/w1d2/aboutme.html
@@ -54,8 +54,8 @@
         </ol>
         <h3>My Mood</h3>
         <div id="idMood">
-            <span class="lbl">Happy:</span> <img src="../images/happy.jpg">
-            <span class="lbl">Sad: </span><img src="../images/sad.jpg">
+            <span class="lbl">Happy:</span> <img src="../images/happy.jpg" alt="happy">
+            <span class="lbl">Sad: </span><img src="../images/sad.jpg" alt="sad">
         </div>
         <br/>
 
