--- a/w1d2/aboutme.html
+++ b/w1d2/aboutme.html
@@ -38,9 +38,35 @@
         
         <h3>My Favorite Movies</h3>
         <p class="clsComment">(I love comedy tv series and I watched several times first two movies)</p>
-        <ol>
+        <ol id="idMovieList">
             <li>
                 Friends <a href="https://www.imdb.com/title/tt0108778/">(IMDB)</a>
+                <table>
+                    <tr>
+                        <td>Director</td><td></td>
+                    </tr>
+                    <tr>
+                        <td></td><td>David Crane, Marta Kauffman</td>
+                    </tr>
+                    <tr>
+                        <td>Genre</td><td></td>
+                    </tr>
+                    <tr>
+                        <td></td><td>Comedy/ Drama / Romance(<a href="" class="more">more</a>)</td>
+                    </tr>
+                    <tr>
+                        <td>Tagline</td><td></td>
+                    </tr>
+                    <tr>
+                        <td></td><td>I'll Be There For You</td>
+                    </tr>
+                    <tr>
+                        <td>Plot Outline</td><td></td>
+                    </tr>
+                    <tr>
+                        <td></td><td>Follows the personal and professional lives of six twenty to thirty-something-year-old friends living in Manhattan.</td>
+                    </tr>
+                </table>
             </li>
             <li>
                 Big Bang Theory <a href="https://www.imdb.com/title/tt0898266/?ref_=nv_sr_srsg_0">(IMDB)</a>
