fix html syntax errors

--- a/w1d2recipe/index.html
+++ b/w1d2recipe/index.html
@@ -42,7 +42,7 @@ One 9-inch pie
         <h2>DIRECTIONS</h2>
         <ol>
             <li><b>Preheat Oven:</b> Preheat oven to 350 degrees F (175 degrees C).</li>
-            <li><b>Make Lemon Filling:</b> In a medium saucepan ...</li>
+            <li><b>Make Lemon Filling:</b> In a medium saucepan ...
                 <ul>
                     <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
                     <li>Stir in water, lemon juice and lemon zest.</li>
@@ -54,10 +54,11 @@ One 9-inch pie
                     <li>Remove from heat.</li>
                     <li>Pour filling into baked pastry shell.</li>
                 </ul>
+            </li>
             <li><b>Make Meringue:</b> In a large glass or metal bowl ...</li>
-                Whip egg whites until foamy.
-                Add sugar gradually, and continue to whip until stiff peaks form.
-                Spread meringue over pie, sealing the edges at the crust.
+                <li>Whip egg whites until foamy.</li>
+                <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
+                <li>Spread meringue over pie, sealing the edges at the crust.</li>
             <li><b>Bake:</b> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
         </ol>
         <span class="shortComment">This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of cake pie!</span>
