--- a/w1d2recipe/index.html
+++ b/w1d2recipe/index.html
@@ -26,16 +26,16 @@ One 9-inch pie
         <h2>INGREDIENTS</h2>
         <ul>
             <li>1 cup white sugar</li>
-            <li>2 tbsp all-purpose flour</li>
-            <li>3 tbsp cornstarch</li>
-            <li>1/4 tsp salt</li>
+            <li>2 <abbr>tbsp</abbr> all-purpose flour</li>
+            <li>3 <abbr>tbsp</abbr> cornstarch</li>
+            <li>1/4 <abbr>tsp</abbr> salt</li>
             <li>1 1/2 cups water</li>
             <li>2 lemons, juiced and zested</li>
-            <li>2 tbsp butter</li>
+            <li>2 <abbr>tbsp</abbr> butter</li>
             <li>4 egg yolks, beaten</li>
             <li>1 (9 inch) pie crust, baked</li>
             <li>4 egg whites</li>
-            <li>6 tbsp white sugar</li>
+            <li>6 <abbr>tbsp</abbr> white sugar</li>
         </ul>
         <hr/>
 
