add recipe images

--- a/w1d2recipe/index.html
+++ b/w1d2recipe/index.html
@@ -6,6 +6,7 @@
         <title>Recipe</title>
         <meta name="description" content="Recipe">
         <meta name="author" content="Grandma">
+        <link rel="icon" type="image/png" href="recipeImages/pie_icon.gif" />
         <link href="styles.css" rel="stylesheet" />
 
       
@@ -89,7 +90,7 @@ One 9-inch pie
 
         <h2>LINKS</h2>
 
-<a href="">Search for other lemon meringue pie recipes</a><br/>
+<a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a><br/>
 <a href="../index.html">Home</a>
 
 
