--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="w1d2recipe/index.html">W1D2 - Recipe</a>
             </li>
             <li>
-                W1D4 - Movie review
+                <a href="w1d3b/tmnt.html">W1D3b - Movie review</a>
             </li>
             <li>
                 W1D5 - MP3 Library
