--- a/w1d3b/tmnt.html
+++ b/w1d3b/tmnt.html
@@ -6,6 +6,16 @@
 		<meta charset="utf-8" />
 		<link href="movie.css" type="text/css" rel="stylesheet" />
 		<link rel="icon" type="image/gif" href="images/rotten.gif" />		
+		<!-- Homework for the w1d3 about CSS layout, positioning and the CSS box models. 
+			Added some div, span, id and classes in order to apply CSS.
+			1. Top banned with text aligned center, repeated background images with full width
+			2. A header centered, bold and shaddowed according to instruction
+			3. contentArea with 800px width which is applied by CSS
+			4. rightBanner which is general overview with 250 width and other specs according to instruction 
+			5. reviewHeader which contens of review section header
+			6. Reviews div which includes 2 div with column class and its sub classes which indicate reivews
+			7. Added my reviews as well
+		-->
 	</head>
 
 	<body>
