add responsive design exercise

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <a href="w1d3b/tmnt.html">W1D3b - Movie review</a>
             </li>
             <li>
+                <a href="w1d4/responsive.html">W1D4b - Responsive design</a>
+            </li>
+            <li>
                 W1D5 - MP3 Library
             </li>
             <li>
