update col height

--- a/w1d4/responsive.html
+++ b/w1d4/responsive.html
@@ -2,14 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-      
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <title>Response Design Exercise</title>
         <meta name="description" content="Response design">
         <meta name="author" content="bootstrap">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet" />
-
-      
       </head>
     <body>
         <div class="base">
