--- a/w1d4/responsive.html
+++ b/w1d4/responsive.html
@@ -13,7 +13,6 @@
         <div class="base">
             <header>
                 <h3>Header</h3>
-                
             </header>
             <div class="menu">
                 <div class="col-md-1">Home</div>
@@ -21,12 +20,14 @@
                 <div class="col-md-1">Contact</div>
             </div>
             <main>
-                <div id="col1" class="col-sm-6 col-lg-4">Column1</div>
-                <div id="col2" class="col-sm-6 col-lg-4">Column2</div>
-                <div id="col3" class="col-sm-12 col-lg-4">Column3</div>
+                <div id="col1" class="col-6 col-sm-6 col-lg-4">Column1</div>
+                <div id="col2" class="col-6 col-sm-6 col-lg-4">Column2</div>
+                <div id="col3" class="col-12 col-sm-12 col-lg-4">Column3</div>
             </main>
             <footer>
-                Footer
+                <h3>
+                    Footer
+                </h3>
             </footer>
         </div>
         
