--- a/w1d4/responsive.html
+++ b/w1d4/responsive.html
@@ -20,9 +20,9 @@
                 <div class="col-md-1">Contact</div>
             </div>
             <main>
-                <div id="col1" class="col-6 col-sm-6 col-lg-4">Column1</div>
-                <div id="col2" class="col-6 col-sm-6 col-lg-4">Column2</div>
-                <div id="col3" class="col-12 col-sm-12 col-lg-4">Column3</div>
+                <div id="col1" class="box">Column1</div>
+                <div id="col2" class="box">Column2</div>
+                <div id="col3" class="box">Column3</div>
             </main>
             <footer>
                 <h3>
