--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 <a href="w1d3b/tmnt.html">W1D3b - Movie review</a>
             </li>
             <li>
-                <a href="w1d4/responsive.html">W1D4b - Responsive design</a>
+                <a href="w1d4/responsive.html">W1D4 - Responsive design</a>
+            </li>
+            <li>
+                <a href="w1d5/form.html">W1D5 - Web form</a>
             </li>
             <li>
                 W1D5 - MP3 Library
@@ -36,9 +39,6 @@
                 W1D6 - Movie Review PHP
             </li>
         </ul>
-        <a
-href="https://validator.w3.org/check/referer"> <img
-src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-alt="html validator"/></a>
+        <a href="https://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
     </body>
 </html>
