--- a/w1d5/form.html
+++ b/w1d5/form.html
@@ -16,7 +16,7 @@
                     <input type="text" class="form-control"
                         id="idWebsite"
                         placeholder="http://"
-                        pattern="^((https?|http):\/\/)?(www.)?[a-z0-9]+\.[a-z]+(\/[a-zA-Z0-9#]+\/?)*$"
+                        pattern="^(https?:\/\/)?(www.)?[a-z0-9]+\.[a-z]+(\/[a-zA-Z0-9#]+\/?)*$"
                         title="Only allows website url starts with http:// or https://"
                         required
                         >
