--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       </head>
     <body>
 
-        <img src="picture.jpg" alt="Avatar" width="300px"/>
+        <img src="picture.jpg" alt="Avatar" width="300"/>
         <h1>Munkhbold Dembel</h1>
         <ul>
             <li>
