--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
                 <a href="w1d3b/tmnt.html">Lab 3 - Movie review</a>
             </li>
             <li>
-                <a href="w1d4/responsive.html">Lab 4 - Responsive design</a>
+                Lab 4
+                <ul>
+                    <li>
+                        <a href="w1d4/grid.html">Grid Layout</a>
+                    </li>
+                    <li>
+                        <a href="w1d4/flexbox.html">Flex Layout</a>
+                    </li>
+                    <li>
+                        <a href="w1d4/bootstrap.html">Bootstrap</a>
+                    </li>
+                </ul>
             </li>
             <li>
                 Lab 5
@@ -46,10 +57,10 @@
                 </ul>
             </li>
             <li>
-                W1D5 - MP3 Library
+                Lab 6 - MP3 Library
             </li>
             <li>
-                W1D6 - Movie Review PHP
+                Lab 7 - Movie Review PHP
             </li>
         </ul>
         <hr/>
