--- a/w1d4/flexbox.html
+++ b/w1d4/flexbox.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name=viewport content="width=device-width, initial-scale=1">
-        <title>Response Design Exercise</title>
+        <title>Flexbox responsive layout</title>
         <meta name="description" content="Response design">
         <meta name="author" content="bootstrap">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="styles.css" rel="stylesheet" />
+        <link href="css/flexbox.css" rel="stylesheet" />
       </head>
     <body>
         <div class="base">
@@ -15,9 +14,9 @@
                 <h3>Header</h3>
             </header>
             <div class="menu">
-                <div class="col-md-1">Home</div>
-                <div class="col-md-1">Features</div>
-                <div class="col-md-1">Contact</div>
+                <div>Home</div>
+                <div>Features</div>
+                <div>Contact</div>
             </div>
             <main>
                 <div id="col1" class="box">Column1</div>
