--- a/w1d5/domeMarketForm.html
+++ b/w1d5/domeMarketForm.html
@@ -20,13 +20,10 @@
                     <a class="nav-link" href="#">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Supplier</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">Suppliers</a>
                 </li>
               </ul>
-              <span class="navbar-text" style="margin-right: 10px;">
+              <span class="navbar-text nav-link" style="margin-right: 10px;">
                 Hello!
               </span>
              <input type="button" class="btn btn-light" value="Sign Out">
