--- a/w1d5/domeMarketForm.html
+++ b/w1d5/domeMarketForm.html
@@ -67,7 +67,7 @@
                         <div class="form-group btns">
                             <button type="reset" class="btn btn-outline-dark">Reset</button>
                             <button type="cancel" class="btn btn-outline-danger">Cancel</button>
-                            <button type="submit" class="btn btn-outline-info">Submit</button>
+                            <button type="submit" class="btn btn-outline-primary">Add Product</button>
                         </div>
                     </div>
                 </div>
