--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                 </ul>
             </li>
             <li>
+                Lab 6
+                <ul>
+                    <li>
+                        <a href="w1d6/form.html">Javascript basic</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
                 Lab 6 - MP3 Library
             </li>
             <li>
