add jsintro in index

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Lab 6
                 <ul>
                     <li>
-                        <a href="w1d6/form.html">Javascript basic</a>
+                        <a href="w1d6/jsintro.html">Javascript basic</a>
                     </li>
                 </ul>
             </li>
