add product all elements

--- a/w1d6/jsintro.html
+++ b/w1d6/jsintro.html
@@ -44,6 +44,9 @@
             console.log("   b) return array with all elements equal to 3: [3,4,5,6,3] -> "
                 + myFunctionTest([3,3], function(){ return filterEqualThree([3,4,5,6,3])}));
             
+            console.log("   c) Expected output of productAllElements([3,4,5]) is 60; "
+                + myFunctionTest(60, function(){ return productAllElements([3,4,5])}));
+            
         </script>
     </body>
 </html>
