--- a/index.html
+++ b/index.html
@@ -65,10 +65,21 @@
                 </ul>
             </li>
             <li>
-                Lab 6 - MP3 Library
+                Lab 7
+                <ul>
+                    <li>
+                        <a href="w2d1/jsintro.html">map/filter/reduce</a>
+                    </li>
+                    <li>
+                        <a href="w2d1/decoratemytext.html">Decorate My Text</a>
+                    </li>
+                </ul>
             </li>
             <li>
-                Lab 7 - Movie Review PHP
+                MP3 Library
+            </li>
+            <li>
+                Movie Review PHP
             </li>
         </ul>
         <hr/>
