--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 Lab 7
                 <ul>
                     <li>
-                        <a href="w2d1/jsintro.html">map/filter/reduce</a>
+                        <a href="w2d1/prob1/jsintro.html">map/filter/reduce</a>
                     </li>
                     <li>
-                        <a href="w2d1/decoratemytext.html">Decorate My Text</a>
+                        <a href="w2d1/prob2/decoratemytext.html">Decorate My Text</a>
                     </li>
                 </ul>
             </li>
