--- a/w2d1/prob1/jsintro.html
+++ b/w2d1/prob1/jsintro.html
@@ -6,7 +6,7 @@
         <title>Javascript introduction</title>
         <meta name="description" content="Js intro">
         <meta name="author" content="js">
-        <script src="lib/scripts.js"></script>
+        <script src="scripts.js"></script>
     </head>
     <body>
         <h1>Please look in Chrome developer console to see the output. CTRL_SHIFT_J</h1>
