--- a/w2d1/prob2/decoratemytext.html
+++ b/w2d1/prob2/decoratemytext.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 		<title>Text Decorator</title>
-		<link href="lib/decoratemytext.css" type="text/css" rel="stylesheet">
+		<link href="decoratemytext.css" type="text/css" rel="stylesheet">
 		<script src="decoratemytext.js"></script>
 
 		<!--
@@ -16,7 +16,7 @@
 		<h1>Text Decorator</h1>
 		
 		<div>
-			<img src="lib/decorated.gif" alt="very decorated!">
+			<img src="decorated.gif" alt="very decorated!">
 		</div>
 
 		<!-- Your UI controls go here -->
@@ -31,7 +31,9 @@ Simple Item 2
         <fieldset>
                 <legend>Decoration</legend>
                 <button id="idBigger">Bigger Decoration!</button>
-                <input id="idBling" type="checkbox" value="bling"/>Bling <br>
+				<input id="idBling" type="checkbox" value="bling"/>Bling <br>
+				<button id="idIgpay">Igpay Atinlay</button><br/>
+				<button id="idMalkovitch">Malkovitch</button>
 			</fieldset>
 	</body>
 </html>
