--- a/w2d1/prob2/decoratemytext.html
+++ b/w2d1/prob2/decoratemytext.html
@@ -35,5 +35,13 @@ Simple Item 2
 				<button id="idIgpay">Igpay Atinlay</button><br/>
 				<button id="idMalkovitch">Malkovitch</button>
 			</fieldset>
+			<br>
+			<hr/>
+			<a href="https://validator.w3.org/check/referer">
+				<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+	
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+					<img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"/></a>
+				<br/>
 	</body>
 </html>
