--- a/w2d1/prob2/decoratemytext.html
+++ b/w2d1/prob2/decoratemytext.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0069)http://mumstudents.org/cs472/2016-03-AS-KL/Labs/6/decoratemytext.html -->
-<html>
+<html lang="en">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Text Decorator</title>
 		<link href="decoratemytext.css" type="text/css" rel="stylesheet">
 		<script src="decoratemytext.js"></script>
