--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                 </ul>
             </li>
             <li>
+                Lab 8
+                <ul>
+                    <li>
+                        <a href="w2d2/ascii.html">ASCIImation</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
                 MP3 Library
             </li>
             <li>
