--- a/index.html
+++ b/index.html
@@ -79,8 +79,15 @@
                 Lab 8
                 <ul>
                     <li>
-                        <a href="w2d2/ascii.html">ASCIImation</a>
+                        <a href="w2d2/prob1/ascii.html">ASCIImation</a>
                     </li>
+                    <li>
+                        <a href="w2d2/prob2/mocha.html">MochaW1D5functions</a>
+                    </li>
+                    <li>
+                        <a href="w2d2/prob3/pure.html">Map/filter implementation</a>
+                    </li>
+                    
                 </ul>
             </li>
             <li>
