--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
                 </ul>
             </li>
             <li>
+                Lab 9
+                <ul>
+                    <li>
+                        <a href="w2d3/mocha.html">Js Practice</a>
+                    </li>
+                    
+                </ul>
+            </li>
+            <li>
                 MP3 Library
             </li>
             <li>
