--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
                 </ul>
             </li>
             <li>
+                Lab 10
+                <ul>
+                    <li>
+                        <a href="w2d5/mocha.html">Prototype inheritance</a>
+                    </li>
+                    
+                </ul>
+            </li>
+            <li>
                 MP3 Library
             </li>
             <li>
