--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
                 </ul>
             </li>
             <li>
+                Lab 11
+                <ul>
+                    <li>
+                        <a href="w3d2/mocha.html">Class inheritance</a>
+                    </li>
+                    
+                </ul>
+            </li>
+            <li>
                 MP3 Library
             </li>
             <li>
