--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
                 </ul>
             </li>
             <li>
+                Lab 12
+                <ul>
+                    <li>
+                        <a href="w3d3/Maze.html">Maze Game</a>
+                    </li>
+                    
+                </ul>
+            </li>
+            <li>
                 MP3 Library
             </li>
             <li>
